--- a/GoogleAnalytics/app/src/main/AndroidManifest.xml
+++ b/GoogleAnalytics/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main" >
@@ -16,6 +15,18 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".DetailsActivity"
+            android:label="@string/title_activity_details" >
+        </activity>
+        <activity
+            android:name=".scheduling"
+            android:label="@string/title_activity_scheduling" >
+        </activity>
+        <activity
+            android:name=".ScheduleActivity"
+            android:label="@string/title_activity_scheduling" >
         </activity>
     </application>
 
