--- a/GoogleAnalytics/app/src/main/AndroidManifest.xml
+++ b/GoogleAnalytics/app/src/main/AndroidManifest.xml
@@ -6,10 +6,11 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        >
         <activity
             android:name=".MainActivity"
-            android:label="@string/title_activity_main" >
+            android:label="@string/title_activity_main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,10 +20,6 @@
         <activity
             android:name=".DetailsActivity"
             android:label="@string/title_activity_details" >
-        </activity>
-        <activity
-            android:name=".scheduling"
-            android:label="@string/title_activity_scheduling" >
         </activity>
         <activity
             android:name=".ScheduleActivity"
