--- a/GoogleAnalytics/app/src/main/AndroidManifest.xml
+++ b/GoogleAnalytics/app/src/main/AndroidManifest.xml
@@ -20,10 +20,17 @@
         <activity
             android:name=".DetailsActivity"
             android:label="@string/title_activity_details" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".DetailsActivity" />
         </activity>
         <activity
             android:name=".ScheduleActivity"
             android:label="@string/title_activity_scheduling" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ScheduleActivity" />
+
         </activity>
     </application>
 
